--- a/frontend/pathway/package.json
+++ b/frontend/pathway/package.json
@@ -10,34 +10,34 @@
     "eject": "expo eject"
   },
   "dependencies": {
-    "@react-native-picker/picker": "2.4.0",
+    "@react-native-picker/picker": "2.4.8",
     "@react-navigation/drawer": "^6.4.3",
     "@react-navigation/material-bottom-tabs": "^6.2.2",
     "@react-navigation/material-top-tabs": "^6.2.2",
     "@react-navigation/native": "^6.0.11",
     "@react-navigation/stack": "^6.2.2",
     "color-string": "^1.9.1",
-    "expo": "~45.0.0",
-    "expo-status-bar": "~1.3.0",
-    "expo-web-browser": "~10.2.1",
+    "expo": "^48.0.0",
+    "expo-status-bar": "~1.4.4",
+    "expo-web-browser": "~12.1.1",
     "firebase": "^9.6.11",
     "galio-framework": "^0.8.0",
     "native-base": "^3.4.11",
-    "react": "17.0.2",
-    "react-dom": "17.0.2",
-    "react-native": "0.68.2",
-    "react-native-gesture-handler": "~2.2.1",
-    "react-native-pager-view": "5.4.15",
+    "react": "18.2.0",
+    "react-dom": "18.2.0",
+    "react-native": "0.71.3",
+    "react-native-gesture-handler": "~2.9.0",
+    "react-native-pager-view": "6.1.2",
     "react-native-paper": "^4.12.4",
-    "react-native-reanimated": "~2.8.0",
+    "react-native-reanimated": "~2.14.4",
     "react-native-responsive-screen": "^1.4.2",
-    "react-native-safe-area-context": "4.2.4",
-    "react-native-svg": "12.3.0",
+    "react-native-safe-area-context": "4.5.0",
+    "react-native-svg": "13.4.0",
     "react-native-tab-view": "^3.1.1",
-    "react-native-web": "0.17.7"
+    "react-native-web": "~0.18.11"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.20.0"
   },
   "private": true
 }
